--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+*~
+.*
+*.iml
+rebel.xml
+deploy.sh
+
 target/
+upload/
+static/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -6,3 +14,5 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+
+!.gitignore
