can run the demo by grant_type=password

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:applicationContext.xml
+            classpath:spring-oauth2.xml
             classpath:spring-security.xml
         </param-value>
     </context-param>
